unpackaged/objects/sfLma__Package__c.object
<CustomObject>
    <description>A Package Object represents information about the package as it is defined in the developer&apos;s Salesforce Organization. A record is created or updated each time a new version of the package is uploaded to AppExchange.</description>
    <fields>
        <fullName>sfLma__Developer_Name__c</fullName>
        <label>Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Developer_Org_ID__c</fullName>
        <label>Developer Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Help__c</fullName>
        <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_package_detail.htm&quot;, &quot;Help for Packages&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Last_License_Refresh__c</fullName>
        <inlineHelpText>This is the last date the subscriber license records for this package were refreshed.  A package license refresh can only be run once every seven days.</inlineHelpText>
        <label>Last License Refresh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Latest_Version__c</fullName>
        <label>Latest Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Lead_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User in the LMO who is responsible for managing the leads generated for this package. They will become the owner of any lead generated.</description>
        <label>Lead Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001JvRJEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Next_Available_Refresh__c</fullName>
        <formula>sfLma__Last_License_Refresh__c + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Available Refresh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_ID__c</fullName>
        <label>Package ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>sfLma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>